Back In Time

Version 0.9.8
* KDE4: add copy to clipboard
* KDE4: sort files by name, size or date
* cron 5/10 minutes: replace mutiple lines with a single crontab line using divide (*/5 or */10)
* cron: when called from cron redirect output (stdout & stderr) to /dev/null

Version 0.9.6
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* GNOME: update docbook
* KDE4: add snapshots dialog
* GNOME & KDE4: add update snapshots button
* GNOME: handle special folders icons (home, desktop)

Version 0.9.4
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* gnome: better handling of 'take snapshot' status icon
* KDE4 (>= 4.1): first version (not finished)
* update man

Version 0.9.2
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* bug fix: if you add "/a" in include directories and "/a/b" in exclude patterns, "/a/b*" items
  are not excluded
* replace diff with rsync to check if a new snapshot is needed
* code cleanup
* add show hidden & backup files toggle button for files view
* bug fix: it does not include ".*" items even if they are not excluded
  (the items was included but not showed because hidden & backup files was never displayed
  in files view in previous versions)

Version 0.9
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
* make deb packages more debian friendly (thanks to Michael Wiedmann <mw@miwie.in-berlin.de>)
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* bug fix: when you open snapshots dialog for the second time ( or more ) and you make a diff 
  it will make the diff on the file for the first dialog ( all previous dialogs ) and then for 
  the current one