@@ -1,5 +1,4 @@
 TODO:
-* handle recursive symbolic links
 * KDE4: add help
 * KDE4: handle command line parameters
 * KDE4: handle application raise
