@@ -1,6 +1,7 @@
 Back In Time
 
 Version 0.9.8
+* unsafe links are ignored (that means that a link to a file/directory outside of include directories are ignored)
 * KDE4: add copy to clipboard
 * KDE4: sort files by name, size or date
 * cron 5/10 minutes: replace mutiple lines with a single crontab line using divide (*/5 or */10)
